[tool.poetry]
name = "online-market-place"
version = "0.1.0"
description = ""
authors = ["heehong <gmlghd98@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
djangorestframework = "^3.14.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.10.1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
